Fix overflowing

--- a/src/components/NoteItem/NoteItem.module.scss
+++ b/src/components/NoteItem/NoteItem.module.scss
@@ -9,6 +9,8 @@
 	border-radius: 0.5rem;
 	border: 1px solid var(--border-color);
 	color: white;
+	word-break: break-word;
+	overflow-x: hidden;
 
 	&:hover {
 		background-color: var(--primary-color);
