--- a/src/components/NotesList/NotesList.module.scss
+++ b/src/components/NotesList/NotesList.module.scss
@@ -10,6 +10,7 @@
 		background-color: var(--bg-color);
 		grid-template-columns: 1fr 1fr 1fr;
 		gap: 0.75rem;
+		overflow-x: hidden;
 
 		@media screen and (max-width: 768px) {
 			grid-template-columns: 1fr 1fr;
